# turbo

./: Cargo.toml  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: nextjs-integration-test.yml  setup-nextjs-build.yml  test.yml
cli/internal/turbodprotocol/: turbod.proto
crates/turbopack-build/src/: chunking_context.rs
crates/turbopack-core/src/chunk/: chunk_group.rs  mod.rs
crates/turbopack-core/src/issue/: mod.rs
crates/turbopack-css/: Cargo.toml
crates/turbopack-css/src/: lib.rs  module_asset.rs  process.rs  types.rs  util.rs
crates/turbopack-css/src/references/: import.rs  mod.rs  url.rs
crates/turbopack-dev/src/: chunking_context.rs
crates/turbopack-ecmascript-plugins/src/transform/: styled_jsx.rs
crates/turbopack-ecmascript/src/typescript/: resolve.rs
crates/turbopack-tests/tests/: snapshot.rs
crates/turbopack/src/: lib.rs
crates/turbopack/src/module_options/: mod.rs
crates/turborepo-discovery/: Cargo.toml
crates/turborepo-discovery/src/: lib.rs
crates/turborepo-filewatch/: Cargo.toml
crates/turborepo-filewatch/src/: package_watcher.rs
crates/turborepo-lib/: Cargo.toml
crates/turborepo-lib/src/: lib.rs  opts.rs
crates/turborepo-lib/src/cli/: mod.rs
crates/turborepo-lib/src/commands/: info.rs  mod.rs  prune.rs
crates/turborepo-lib/src/daemon/: client.rs  connector.rs  mod.rs  server.rs
crates/turborepo-lsp/: Cargo.toml  out.rs
crates/turborepo-lsp/src/: lib.rs  main.rs
crates/turborepo-repository/: Cargo.toml
crates/turborepo-repository/src/: discovery.rs  lib.rs  package_json.rs
(+61 files in other folders)
