[package]
name = "turborepo-discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tokio-stream = "0.1.14"
turbopath = { version = "0.1.0", path = "../turborepo-paths" }
turborepo-repository = { version = "0.1.0", path = "../turborepo-repository" }
