[package]
name = "turborepo-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tower = "0.4.13"
tower-lsp = { path = "../../../tower-lsp" }
tower-uds = { version = "0.1.0", path = "../tower-uds" }
tracing-subscriber = "0.3.18"
tracing.workspace = true
